kubernetes-deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: my-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-frontend
  template:
    metadata:
      labels:
        app: my-frontend
    spec:
      containers:
      - name: my-frontend
        image: deni1999/my-frontend:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
