kubernetes-deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-service
spec:
  selector:
    app: my-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31013
  type: NodePort
