kubernetes-deployment/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-database-service
spec:
  selector:
    app: my-database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
