kubernetes-deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend-service
spec:
  selector:
    app: my-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 31012
  type: NodePort
